apps/ros-project-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ros-project-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway  # Hack to make it work for common cluster
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ros-project-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: ros-project-webapi
          port: 80
